# ssmtoenv

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/.workflow/: tests.yml
.github/workflows/: publish-pypi.yml  tests.yml
mdocs/: index.md
mdocs/ssmtoenv_doc/: library.md
mdocs/tests_doc/: tests.md
search/: search_index.json
ssmtoenv/: main.py
tests/: test_main.py
tests_doc/tests/: index.html
