[tool.poetry]
name = "ssmtoenv"
version = "0.1.1"
description = "Fetch SSM parameters and add them to .env file"
authors = ["Rahul Mistri <rahulmistri1997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = ">=0.4.0,<1.0.0"
boto3 = "^1.18.0"
python-dotenv = "^0.19.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mkdocs = "^1.2.2"
mkdocstrings-python = "1.2.1"
mkdocs-material = "9.2.0b0"

[tool.poetry.scripts]
ssmtoenv = "ssmtoenv.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
homepage = 'https://rahulmistri1997.github.io/ssmtoenv'
documentation = 'https://rahulmistri1997.github.io/ssmtoenv'
repository = 'https://github.com/rahulmistri1997/ssmtoenv'

[project.readme]
file = "README.md"
content-type = "text/markdown"